sample/retrieveUnpackaged/objects/Quick_QoS_Response__c.object
<CustomObject>
    <description>This object is to host Quick Notes responses that are controlled by selection of Categories.</description>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Substitute_Account_Balance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Substitute Account Balance?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Letter_Code__c</fullName>
        <label>Letter Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Name__c</fullName>
        <label>Letter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_1_Category__c</fullName>
        <label>What</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_2_Category__c</fullName>
        <label>Why</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_3_Category__c</fullName>
        <label>How</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QOS_Code__c</fullName>
        <description>HiAF QOS Code - used to translate in the reverse QOS sync integration</description>
        <label>QOS Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Quick Notes Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>QOS_Code__c</columns>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Level_1_Category__c</columns>
        <columns>Level_2_Category__c</columns>
        <columns>Level_3_Category__c</columns>
        <columns>Response__c</columns>
        <columns>Letter_Code__c</columns>
        <columns>Letter_Name__c</columns>
        <columns>Mode__c</columns>
        <columns>Is_Substitute_Account_Balance__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Letter_Codes</fullName>
        <columns>QOS_Code__c</columns>
        <columns>Level_1_Category__c</columns>
        <columns>Level_2_Category__c</columns>
        <columns>Level_3_Category__c</columns>
        <columns>Response__c</columns>
        <columns>Letter_Code__c</columns>
        <columns>Letter_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Letter_Code__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Letter Codes</label>
    </listViews>
    <nameField>
        <displayFormat>Response-{0000}</displayFormat>
        <label>Quick Notes Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quick_QoS_Response</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>